[package]
name = "damascus"
version = "0.0.2"
edition = "2021"
authors = ["Yato202010"]
description = "filesystem utility crate for the Flamberg mod manager stack"
license-file = "LICENSE"
keywords = ["filesystem", "fuse-overlayfs", "overlayfs"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error
thiserror = "1.0"
# static eval
cfg-if = "1.0"

# Logs
tracing = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
  "Win32_Storage_FileSystem",
  "Win32_Foundation",
  "Win32_System_WindowsProgramming",
  "Win32_Security",
] }
widestring = "1.0"

[target.'cfg(target_family="unix")'.dependencies]
nix = { version = "0.29", features = [
  "user",
  "mount",
  "sched",
  "fs",
  "process",
] }

[dev-dependencies]
colored = "2.1"
temp_testdir = "0.2"

[build-dependencies]
autotools = { version = "0.2", optional = true }
cmake = { version = "0.1", optional = true }
md5 = { version = "0.7", optional = true }
git = { version = "0.19", optional = true, package = "git2" }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[features]
default = ["overlayfs", "fuse-overlayfs-vendored"]
overlayfs = []
fuse-overlayfs = []
fuse-overlayfs-vendored = ["fuse-overlayfs", "autotools", "cache"]
# WARN : experimental may be removed at any moment
unionfs-fuse = []
unionfs-fuse-vendored = ["unionfs-fuse", "cmake", "cache"]
cache = ["dep:md5", "dep:git", "dep:serde", "dep:serde_json"]

[profile.release]
lto = true
opt-level = "s"
strip = true
codegen-units = 1

[profile.dev]
lto = "thin"

[profile.bench]
lto = true
opt-level = "s"

[[test]]
name = "end2end"
path = "tests/end2end.rs"
harness = false
