[package]
name = "damascus"
description = "filesystem utility crate for the Flamberge mod manager stack"
authors = ["Yato202010"]
keywords = ["filesystem", "fuse-overlayfs", "overlayfs", "mount", "Flamberge"]
version = "0.0.9"
repository = "https://github.com/Yato202010/Damascus"
license-file = "LICENSE"
edition = "2021"
resolver = "2"
readme = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
  "Win32_Storage_FileSystem",
  "Win32_Foundation",
  "Win32_System_WindowsProgramming",
  "Win32_Security",
] }
widestring = "1.0"

[target.'cfg(target_family="unix")'.dependencies]
nix = { version = "0.29", features = [
  "user",
  "mount",
  "sched",
  "fs",
  "process",
] }

[dev-dependencies]
colored = "3.0"
temp_testdir = "0.2"

[build-dependencies]
autotools = { version = "0.2", optional = true }
cmake = { version = "0.1", optional = true }
fs_extra = { version = "1.3", optional = true }
md5 = { version = "0.7", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[features]
default = ["overlayfs", "fuse-overlayfs-vendored", "build-cache"]
overlayfs = []
fuse-overlayfs = []
fuse-overlayfs-vendored = ["fuse-overlayfs", "dep:autotools", "dep:fs_extra"]
build-cache = ["dep:md5", "dep:serde", "dep:serde_json"]
# WARN : experimental may be removed at any moment
unionfs-fuse = []
unionfs-fuse-vendored = ["unionfs-fuse", "dep:cmake"]

[profile.release]
lto = true
opt-level = "s"
strip = true
codegen-units = 1

[profile.dev]
lto = "thin"

[profile.bench]
lto = true
opt-level = "s"

[[test]]
name = "end2end"
path = "tests/end2end.rs"
harness = false

[package.metadata.docs.rs]
features = ["fuse-overlayfs", "overlayfs"]
no-default-features = true
